# hcaptcha-solver

./: MANIFEST.in  README.md  api_handler.py  dbaccess.ipynb  img_classifier.py  img_comparator.py  main.ipynb  main.py  pyproject.toml  pytorch_training.py  requirements.txt  sqlite_execution.py  test.bat  vilt.py  visualizer.py  wd_handler.py  yolo.ipynb
[archive]_solver/: wd_handler.py
_archive/: api_handler.py  sqlite_execution.py
_archive/[archive]_captcha_on_website/: automatic_classifier.py
automatic_classifier/: automatic_classifier.py  nn_handler.py  wd_handler.py
captcha_handler/: captcha_handler.py  captcha_wd_handler.py
captcha_solver/: captcha_solver.py  nn_handler.py
collector/: collector.py  sqlite_execution.py  wd_handler.py
data/databases/: captchas.db
dev/: main.ipynb  manual_classifier.py  pytorch_training.py  sqlite_execution.py  unsolved.html  vilt.py  visualizer.py
dev/collector/: collect.ipynb  collector.py  wd_handler.py
dev/v2solver/: v2_handler.py  v2_main.ipynb  v2_manual_classifier.py  v2_training.py  v2_training_classes.py  v2_webdriver_handler.py
hcaptcha-solver/: hcaptcha_solver.py  model_handler.py  testing.ipynb  webdriver_handler.py
manual_classifier/: manual_classifier.py
models/bee_flying_near_a_flower/: keras_metadata.pb  saved_model.pb
models/cactus_in_a_pot/: keras_metadata.pb  saved_model.pb
solver/: solver.py
src/: main.ipynb  manual_classifier.py  pytorch_training.py  sqlite_execution.py  visualizer.py
testing/: hcaptcha-solver.ipynb  stats.ipynb  test.py  vilt.ipynb  yolo.ipynb
(+74 files in other folders)
